metadata/sf-prod/force-app/main/default/objects/RavenApps__Usage_Insights__c/RavenApps__Usage_Insights__c.object-meta.xml
<CustomObject>
    <description>This object records impressions per each Raven Grids as users view and interact with the grids.</description>
    <label>Usage Insight</label>
    <nameField>
        <displayFormat>UI-{00000000}</displayFormat>
        <label>Usage Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Insights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>