metadata/sf-prod/force-app/main/default/objects/RavenApps__Usage_Insights__c/fields/RavenApps__Grid__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Grid__c</fullName>
    <description>Lookup to the relevant grid for this impression</description>
    <label>Grid</label>
    <referenceTo>RavenApps__Grid__c</referenceTo>
    <relationshipName>Usage_Insights</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>