metadata/sf-prod/force-app/main/default/objects/RavenApps__Usage_Insights__c/fields/RavenApps__Grid_Object__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Grid_Object__c</fullName>
    <description>Grid Object - used for simplification of reporting and code so don&apos;t have to look up to parent record each time</description>
    <formula>RavenApps__Grid__r.RavenApps__Object_API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grid Object</label>
    <type>Text</type>
</CustomField>