metadata/sf-prod/force-app/main/default/objects/RavenApps__Usage_Insights__c/fields/RavenApps__Impression_Type__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Impression_Type__c</fullName>
    <description>Records the type of impression</description>
    <label>Impression Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delete Record</fullName>
            </value>
            <value>
                <fullName>Mass Delete</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>New Record</fullName>
            </value>
            <value>
                <fullName>Quick View</fullName>
            </value>
            <value>
                <fullName>Quick Edit</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Filters</fullName>
            </value>
            <value>
                <fullName>Inline Edit</fullName>
            </value>
            <value>
                <fullName>New Task</fullName>
            </value>
            <value>
                <fullName>Grid Impression</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>