metadata/sf-prod/force-app/main/default/objects/RavenApps__Usage_Insights__c/fields/RavenApps__Usage_Date__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__Usage_Date__c</fullName>
    <label>Usage Date</label>
    <type>Date</type>
</CustomField>