metadata/sf-prod/force-app/main/default/objects/RavenApps__Usage_Insights__c/fields/RavenApps__User__c.field-meta.xml
<CustomField>
    <fullName>RavenApps__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the user who made the impression</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Usage_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>