metadata/sf-prod/force-app/main/default/objects/RavenApps__Usage_Insights__c/listViews/RavenApps__All.listView-meta.xml
<ListView>
    <fullName>RavenApps__All</fullName>
    <columns>NAME</columns>
    <columns>RavenApps__Grid__c</columns>
    <columns>RavenApps__Impression_Type__c</columns>
    <columns>RavenApps__User__c</columns>
    <columns>RavenApps__Usage_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>